docs/wemake-python-styleguide/0.11.0/violations/best_practices/WPS419.md
---
code: WPS419
internalName: TryExceptMultipleReturnPathViolation
title: Found try/else/finally with multiple return paths
---

Forbids to use multiple `return` path with `try` / `except` case.

## Reasoning
The problem with `return` in `else` and `finally` is that it is
impossible to say what value is going to be actually returned
without looking up the implementation details. Why? Because `return`
does not expect that some other code will be executed after it. But,
`finally` is always executed, even after `return`. And `else` will
not be executed when there are no exceptions in `try` case and a
`return` statement.

## Solution
Remove `return` from one of the cases.

## Example

    # Wrong:
    try:
        return 1  # this line will never return
    except Exception:
        ...
    finally:
        return 2  # this line will actually return
    
    try:
        return 1  # this line will actually return
    except ZeroDivisionError:
        ...
    else:
        return 0  # this line will never return

<div class="versionadded">

0.7.0

</div>

<div class="versionchanged">

0.11.0

</div>